[BUGFIX] Sponsor banners on small phone size, drawer not closing after navigation and improve footer

--- a/Packages/Application/T3DD.Frontend/Resources/Public/app/styles/app.css
+++ b/Packages/Application/T3DD.Frontend/Resources/Public/app/styles/app.css
@@ -67,10 +67,6 @@ body {
 #scrollHeader::shadow #headerContainer {
 	z-index: 1;
 }
-#navheader {
-	color: #000;
-	background-color: #FF8700;
-}
 
 #navheader .t3dd-logo {
 	margin-top: 32px;
@@ -134,6 +130,14 @@ body {
 
 #footer a {
 	border-bottom: none;
+}
+
+.builders__builtwith {
+	margin-bottom: 4px;
+}
+
+.builders__logos {
+	margin-left: -8px;
 }
 
 .builders__logos a {
